--- a/eTools Ultimate/Views/Pages/Motion/MotionPage.xaml
+++ b/eTools Ultimate/Views/Pages/Motion/MotionPage.xaml
@@ -395,12 +395,14 @@
                             Margin="0,0,10,0"
                             HorizontalAlignment="Left"
                             Appearance="Primary"
-                            Background="#2F70AF">
+                            Background="#2F70AF"
+                            Command="{Binding AddCommand}">
                             <TextBlock Foreground="White" Text="Add" />
                         </ui:Button>
                         <ui:Button
                             x:Name="DeleteButton"
                             Background="#FD292F"
+                            Command="{Binding DeleteCommand}"
                             Content="Delete" />
                     </StackPanel>
 
