--- a/eTools Ultimate/Views/Pages/Motion/MotionPage.xaml
+++ b/eTools Ultimate/Views/Pages/Motion/MotionPage.xaml
@@ -175,6 +175,7 @@
                                 Grid.Column="1"
                                 Height="36"
                                 Margin="5,0,0,0"
+                                Command="{Binding DataContext.SelectIconFileCommand, RelativeSource={RelativeSource AncestorType=Page}}"
                                 Content="..." />
                             <Border
                                 Grid.Column="2"
